--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,3 +36,8 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+
+workflows:
+  jobs:
+    - build-frontend
+    - build-backend
