modified:   .circleci/config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           key: backend-build
 
 workflows:
-  jobs:
-  - build-frontend
-  - build-backend
+  PeojectWorkflow:
+    jobs:
+      - build-frontend
+      - build-backend
