--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - restore_cache:
           keys: [frontend-test]
       - run:
-          name: Back-end build
+          name: frontend test
           command: |
             cd frontend
             npm install
@@ -57,7 +57,7 @@ jobs:
       - restore_cache:
           keys: [backend-test]
       - run:
-          name: Back-end build
+          name: Backend test
           command: |
             cd backend
             npm install
