modified:   .circleci/config.yml 	modified:   .circleci/files/backend.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,8 +104,10 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - restore_cache:
-          keys: [deploy-infrastucture]
+      - run:
+          name: intall tar
+          command: |
+            yum -y install tar gzip
       - run:
           name: Ensure back-end infrastructure exists
           command: |
