--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,10 +117,10 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run:
-          name: intall tar
-          command: |
-            yum -y install tar gzip
+      # - run:
+      #     name: intall tar
+      #     command: |
+      #       yum -y install tar gzip
       - run:
           name: Ensure back-end infrastructure exists
           command: |
