--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            # Your code here
-            exit 1
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
+            
 
 jobs:
   build-frontend:
@@ -120,8 +120,8 @@ jobs:
       - run:
           name: intall tar and gzip
           command: |
-            yum -y install tar 
-            yum -y install gzip
+            yum -y install tar gzip
+            
       - run:
           name: Ensure back-end infrastructure exists
           command: |
@@ -148,7 +148,34 @@ jobs:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-
+      # - run:
+      #     name: destroy environment
+      #     command: 
+      #       - destroy-environment
+  configure-infrastructure:
+    docker:
+      image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["41:c0:fe:34:c5:64:dd:57:d3:02:2e:b1:c8:9f:16:64"]
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/.circleci/ansible
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible 
+            apk add --update tar
+            apk add --update gzip
+            apk add --update awscli
+      - run:
+          name: Configure server
+          command: |
+            ansible-playbook -i inventory.txt configure-server.yml
+            exit 1
+      # Here's where you will add some code to rollback on failure
 workflows:
   ProjectWorkflow:
     jobs:
