--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,7 @@ jobs:
             apk add --update ansible 
             apk add --update tar
             apk add --update gzip
-            apk add --update awscli
+            apk add --update aws-cli
       - run:
           name: Configure server
           command: |
