--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,13 @@ jobs:
             apk add --update ansible 
             apk add --update tar
             apk add --update gzip
-            apk add --no-cache aws-cli
+            apk add --no-cache \
+            python3 \
+            py3-pip \
+        && pip3 install --upgrade pip \
+        && pip3 install --no-cache-dir \
+            awscli \
+        && rm -rf /var/cache/apk/*
 
       - run:
           name: Configure server
