modified:   .circleci/config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible
+            - .circleci/ansible
       - run:
           name: Install dependencies
           command: |
