modified:   .circleci/config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,9 +160,8 @@ jobs:
       - add_ssh_keys:
           fingerprints: ["41:c0:fe:34:c5:64:dd:57:d3:02:2e:b1:c8:9f:16:64"]
       - persist_to_workspace:
-          root: ~/
           paths:
-            - .circleci/ansible
+            - project/.circleci/ansible
       - run:
           name: Install dependencies
           command: |
