--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,6 +159,8 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints: ["41:c0:fe:34:c5:64:dd:57:d3:02:2e:b1:c8:9f:16:64"]
+      - attach_workspace:
+          at: ~/
       - run:
           name: Install dependencies
           command: |
