--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,10 @@ jobs:
               npm install
               npm audit fix --audit-level=critical --force
               npm audit --audit-level=critical
+              npm audit fix
+              npm audit fix --audit-level=critical --force
+              npm audit --audit-level=critical
+              npm audit fix
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -109,6 +113,10 @@ jobs:
               npm install
               npm audit fix --audit-level=critical --force
               npm audit --audit-level=critical
+              npm audit fix
+              npm audit fix --audit-level=critical --force
+              npm audit --audit-level=critical
+              npm audit fix
       - save_cache:
           paths: [backend/node_modules]
           key: backend-scan
