--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,6 +203,9 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
             npm audit fix
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical
+            npm audit fix
             npm run migrations > ./backend/migrations_dump.txt
       - run:
           name: Send migration results to memstash
