--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,6 +205,7 @@ jobs:
             npm audit fix
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
+            npm audit fix 
             npm audit fix
             npm run migrations > ./backend/migrations_dump.txt
       - run:
