--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,7 +205,9 @@ jobs:
             npm audit fix
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-            npm audit fix 
+            npm audit fix
+            npm audit fix --audit-level=critical --force
+            npm audit --audit-level=critical 
             npm audit fix
             npm run migrations > ./backend/migrations_dump.txt
       - run:
