--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,14 +200,9 @@ jobs:
           command: |
             cd backend
             npm install
+            npm fund
             npm audit fix --audit-level=critical --force
             npm audit --audit-level=critical
-            npm audit fix
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical
-            npm audit fix
-            npm audit fix --audit-level=critical --force
-            npm audit --audit-level=critical 
             npm audit fix
             npm run migrations > ./backend/migrations_dump.txt
       - run:
