--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,8 +211,8 @@ jobs:
             cd backend
             npm install
             npm fund
-            npm audit fix
-            npm run migrations > ./backend/migrations_dump.txt
+            npm audit fix --force
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
