--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,18 +210,20 @@ jobs:
           command: |
             cd backend
             npm install
+            npm run build
             npm fund
+            npm audit fix
             npm audit fix --force
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
-            if grep -q "has been executed successfully." ./backend/migrations_dump.txt
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
             curl -H "Content-Type: text/plain" -H "token: 7933fe63-4687-4fa1-8426-aa25aa1730ec" --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID:0:7}
             curl https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi   
-            cat ./backend/migrations_dump.txt
+            cat ~/project/backend/migrations_dump.txt
 workflows:
   ProjectWorkflow:
     jobs:
