--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,6 +210,7 @@ jobs:
           command: |
             cd backend
             npm install
+            npm install
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
