--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,7 +210,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm install
+            npm run build
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
