--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,7 +232,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install python37 | y
+            yum install python37 
+            echo "y"
             curl -O https://bootstrap.pypa.io/get-pip.py
             python3 get-pip.py --user
             python3 -m pip install --user ansible
@@ -259,25 +260,25 @@ jobs:
 workflows:
   ProjectWorkflow:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires :
-            - build-frontend
-      - test-backend:
-          requires:
-            - build-backend
-      - scan-frontend:
-          requires :
-            - build-frontend
-      - scan-backend:
-          requires:
-            - build-backend 
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires :
+      #       - build-frontend
+      # - test-backend:
+      #     requires:
+      #       - build-backend
+      # - scan-frontend:
+      #     requires :
+      #       - build-frontend
+      # - scan-backend:
+      #     requires:
+      #       - build-backend 
+      # - deploy-infrastructure:
+      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      # - configure-infrastructure:
+      #     requires: [deploy-infrastructure]
+      # - run-migrations:
+      #     requires: [configure-infrastructure]
       - deploy-frontend:
-          requires: [run-migrations]
+          # requires: [run-migrations]
