--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,8 +232,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install python37 
-            echo "y"
+            yes | yum install python37 
             curl -O https://bootstrap.pypa.io/get-pip.py
             python3 get-pip.py --user
             python3 -m pip install --user ansible
