--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,26 +220,21 @@ jobs:
             cat ~/project/backend/migrations_dump.txt
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run:
-          name: Install tar & gzip
-          command: |
-            yum -y install tar gzip
+      - restore_cache:
+          keys: [frontend]
       - attach_workspace:
           at: ~/
       - run:
-          name: Install dependencies
+          name: Install AWS CLI dependencies
+          working_directory: /tmp
           command: |
-            yes | yum install python37 
-            curl -O https://bootstrap.pypa.io/get-pip.py \
-            python3 get-pip.py --user \
-            python3 -m pip install --user ansible 
-            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash \
-            . ~/.nvm/nvm.sh \
-            nvm install --lts \
-            yum install nodejs npm --enablerepo=epel
+            sudo apt-get update && sudo apt-get install -yy less
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
       - run:
           name: Get backend url
           command: |
