--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,5 +307,5 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [run-migrations]
-      - deploy-backend
+      - deploy-backend:
           requires: [run-migrations]
