modified:   .circleci/config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,20 +18,21 @@ commands:
   revert-migrations:
     description: Revert the last migration
     parameters:
-        workflow_id:
-            type: string      
+      workflow_id:
+        type: string 
+        default: "${CIRCLE_WORKFLOW_ID:0:7}"      
     steps:
-        - run:
-            name: Revert migrations
-            when: on_fail
-            command: |
-                SUCCESS=$(curl --insecure  https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_<< parameters.workflow_id >>)
-                if (( $SUCCESS == 1 ));
-                then
-                    cd ~/project/backend
-                    npm install
-                    npm run migration:revert
-                fi
+      - run:
+          name: Revert migrations
+          when: on_fail
+          command: |
+              SUCCESS=$(curl --insecure  https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_<< parameters.workflow_id >>)
+              if (( $SUCCESS == 1 ));
+              then
+                  cd ~/project/backend
+                  npm install
+                  npm run migration:revert
+              fi
 
 jobs:
   build-frontend:
