--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,6 +320,7 @@ jobs:
             && pip3 install --no-cache-dir \
             awscli \
             && rm -rf /var/cache/apk/*
+            aws --version
       - run:
           name: Get backend url
           command: |
@@ -334,7 +335,7 @@ jobs:
             export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' --region us-east-1 --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
-            if curl -v "${API_URL}/api/status" | grep "ok"
+            if curl "${API_URL}/api/status" | grep "ok"
             then
                 return 0
             else
