--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,7 +179,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: cimg/python:3.10
     steps:
       - checkout
       - add_ssh_keys:
@@ -206,7 +206,7 @@ jobs:
             ansible-playbook -i inventory.txt configure-server.yml
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/python:3.10
     steps:
       - checkout
       - restore_cache:
@@ -222,19 +222,28 @@ jobs:
             unzip awscliv2.zip
             sudo ./aws/install
       - run:
+          name: Install Node.js 13.8.0
+          command: |
+            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+            sudo apt install -y nodejs
+            sudo npm install --global n
+            sudo n 13.8.0
+      - run:
           name: Run migrations
           command: |
             cd backend
             npm install
-            npm run migrations > ~/project/backend/migrations_dump.txt
+            npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
-          name: Send migration results to kvdb.io
+          name: Send migration status to kvdb.io
           command: |
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-            curl https://kvdb.io/9GE4jRtKznmVKRfvdBABBe/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
-            fi   
-            cat ~/project/backend/migrations_dump.txt
+              curl https://kvdb.io/V4MJxoNBaapVJoDdgNJ47g/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            else
+              echo "No migrations are pending" 
+            fi
   deploy-frontend:
     docker:
       - image: circleci/node:13.8.0
