--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -195,12 +195,9 @@ jobs:
             unzip awscliv2.zip
             sudo ./aws/install
       - run:
-          name: Install Node.js 13.8.0
-          command: |
-            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-            sudo apt install -y nodejs
-            sudo npm install --global n
-            sudo n 13.8.0
+        name: Install Ansible
+        command: |
+          python3 -m pip install --user ansible
       - run:
           name: Configure server
           command: |
