--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,19 +1,32 @@
 ---
 - name: "Creates backend app directory"
   file:
-    path: ~/backend-app
+    path: /home/ubuntu/backend-app
     state: directory
 - name: "Unarchive backend files"
   unarchive:
     src: artifact.tar.gz
-    dest: ~/backend-app
+    dest: /home/ubuntu/backend-app
 - name: "Installing Node Dependencies"
   shell: |
     cd ~/backend-app
     npm i
+- name: Start the app
+  shell: |
+    cd /home/ubuntu/backend-app/dist
+    export TYPEORM_ENTITIES="./modules/domain/**/*.entity.js"
+    export TYPEORM_HOST=database-1.csxeduxs3iwm.us-east-1.rds.amazonaws.com
+    export TYPEORM_PORT=5432
+    export TYPEORM_USERNAME=postgres
+    export TYPEORM_PASSWORD=mypassword
+    export TYPEORM_DATABASE=Udapeople
+    export TYPEORM_MIGRATIONS_DIR=./migrations
+    export TYPEORM_MIGRATIONS=./migrations/*.js
+    pm2 stop default
+    pm2 start -f main.js
 - name: "Executing Node app with PM2"
   shell: |
-    cd ~/backend-app/dist
+    cd /home/ubuntu/backend-app
     pm2 stop default
     pm2 start main.js
 
@@ -21,7 +34,7 @@
 
 - name: print message
   debug:
-    msg: "{{ execute_node.stdout_lines }}"
+    msg: "{{ execute_node.stdout_lines }}"  
 - name: "Configure pm2 to start as service"
   shell: |
     sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
